<resources>
    <string name="app_name">AJICR</string>
    <string name="title_home">Inicio</string>
    <string name="title_jornadas">Jornadas</string>
    <string name="title_seminarios">Seminarios</string>
    <string name="title_encuentros">Encuentros</string>
    <string name="title_contacto">Contacto</string>
    <string name="title_activity_jornadas">AJICR - Jornadas</string>
    <string name="home_presentacion">Presentación</string>
    <string name="content_home">La <b>Asociación de Jóvenes Investigadores en Ciencias de las Religiones (AJICR)</b> es una asociación con carácter apartidista, aconfesional y laico creada por investigadores noveles que se encuentra inscrita en el <b>Registro Nacional de Asociaciones</b> del Ministerio del Interior con número nacional “611051”. AJICR tiene como fines:</string>
    <string name="content_home1"><li>Crear un espacio de investigación en Ciencias de las Religiones</li>.</string>
    <string name="content_home2"><li>Fomentar la participación de investigadores noveles y la colaboración entre profesores e investigadores en cualquier rama relacionada con el estudio de las religiones.</li></string>
    <string name="content_home3"><li>Promover un espacio común donde se permita intercambiar proyectos y estudios en los distintos ámbitos relacionados con el campo de las religiones.</li></string>
    <string name="content_home4"><li>Impulsar la colaboración tanto a nivel nacional como internacional con asociaciones de investigadores de ciencias de las religiones y entre la comunidad científica.</li></string>
    <string name="content_home5"><li>Fomentar el desarrollo de estudios interdisciplinares mediante la colaboración y divulgación de las investigaciones</li></string>
    <string name="content_home6">Para el cumplimiento de estos fines se realizarán las siguientes actividades:</string>
    <string name="content_home7"><li>Mesas redondas con una periodicidad establecida por el consejo de dirección de la asociación.</li></string>
    <string name="content_home8"><li>Realizar un congreso anual que recoja proyectos de investigación.</li></string>
    <string name="content_home9"><li>Divulgación de investigaciones, proyectos y actividades mediante las redes sociales e Internet.</li></string>
    <string name="content_home10"><li>Generar un fondo bibliográfico común de apoyo a la investigación interdisciplinar de los temas relacionados con las ciencias de las religiones.</li></string>
    <string name="content_home11"><li>Realizar seminarios para investigadoras e investigadores de diversos temas que puedan resultar interesantes para la profundización en el estudio de las religiones y diversos sistemas de creencias</li></string>
    <string name="content_home12">Toda nuestra actividad esta amparada por el <b>Instituto Universitario de Ciencias de las Religiones</b> de la Universidad Complutense de Madrid.</string>
    <string name="content_home13">Puede consultar los estatutos de la Asociación de Jóvenes Investigadores en Ciencias de las Religiones pinchando en el siguiente enlace:</string>
    <string name="estatutos_link"><a href="https://ajicr.files.wordpress.com/2016/05/2_estatutos-ajicr-definitivos-sin-firmas.pdf">Estatutos AJICR</a></string>
    <string name="explorar">Explorar</string>
    <string name="title_seminario_AR_2">II Seminario de Investigación AJICR: “Arte y Religiones”</string>
    <string name="subTitle_seminario_AR_2">Lo Divino y lo Estético</string>
    <string name="fecha_seminario_AR_2">Fecha realización - 18 y 19 de Febrero de 2020</string>
    <string name="cartel_seminario_AR_2">Cartel:</string>
    <string name="localizacion_seminario_AR_2">Localización: </string>
    <string name="localizacion2_seminario_AR_2">El seminario tendra lugar en O_LUMEN, espacio para las artes y la palabra, situado en la calle Claudio Coello, 141 (Madrid).</string>
    <string name="content1_seminario_AR_2">La historia de las religiones y la historia del arte tienen una relación muy estrecha desde tiempos inmemorables; siendo la expresión estética una herramienta más del ser humano para comprender y acercarse a la espiritualidad, la cosmovisión y lo transcendente.</string>
    <string name="content2_seminario_AR_2">La obra de arte se convirtió –y sigue siendo actualmente– un potente catalizador y transmisor de significados, respuestas y cuestiones religiosas con mucha fuerza. Un lenguaje donde la experiencia estética y sensorial cobra una dimensión histórico-religiosa.</string>
    <string name="content3_seminario_AR_2">Con un criterio académico-científico, y desde una perspectiva interdisciplinar, en esta segunda edición del Seminario de Investigación «Arte y Religiones» de la Asociación de Jóvenes Investigadores en Ciencias de las Religiones (AJICR), se quiere poner el foco en el binomio de lo divino y lo estético.</string>
    <string name="link_seminario_AR_2"><a href="https://ajicr.files.wordpress.com/2019/10/lo-divino-y-lo-estc389tico-call-for-papers.pdf">Descarga el PDF con toda la información</a>.</string>
    <string name="title_jornadas_7">VI Jornadas Universitarias de AJICR: “La Experiencia Siniestra”</string>
    <string name="subTitle_jornadas_7">Satanismo y Sendero de la Mano Izquierda</string>
    <string name="fecha_jornadas_7">Fecha realización - 28 de Noviembre de 2019</string>
    <string name="cartelJornadas_7">Cartel de las Jornadas: </string>
    <string name="content1_jornadas_7">Desde AJICR y junto a la colaboración de Satanistas de España os presentamos nuestras próximas jornadas con el formato de seminario sobre Satanismo y Sendero de la Mano Izquierda. ¿Qué es el Satanismo? ¿Cuáles son los elementos que lo componen? ¿Son las connotaciones que tiene veraces?. No te pierdas este seminario sobre uno de los temas más controvertidos en Ciencias de las Religiones.</string>
    <string name="cartelJornadasV">Cartel:</string>
    <string name="title_encuentro_2">II Encuentro de Jóvenes Investigadores en Ciencias de las Religiones 2019 (II EJICR)</string>
    <string name="fecha_encuentro_2">Fecha realización - 3, 4 y 5 de Abril de 2019</string>
    <string name="content_2EJICR">El éxito y la buena acogida del I Encuentro de Jóvenes Investigadores en Ciencias de las Religiones, de carácter internacional, puso de manifiesto que la sociedad española en general, y el mundo universitario en particular, reclaman foros de debate e intercambio de ideas acerca de realidades tan complejas y poliédricas como son las religiones. Y es que una disciplina tan joven en España, la Historia o Ciencias de las Religiones, está logrando consolidarse poco a poco en la universidad pública a través de programas de formación como el Máster en Ciencias de las Religiones de la UCM o el recientemente inaugurado Máster en Ciencias de las Religiones: Historia y sociedad de la UPO. En consecuencia, AJICR busca dar respuesta a esta necesidad celebrando, tras dos años, el II EJICR, que tendrá lugar los días <b>3 y 4 de abril de 2019 en el Salón de Actos de la Facultad de Filología (Edificio D) de la Universidad Complutense de Madrid </b>, situado en la Calle Profesor Aranguren, s/n (ver espacios), y el día <b>5 de abril en el Centro Sefarad-Israel</b>, en C/ Mayor, 69 (ver espacios). También se realizarán diferentes actividades culturales durante el Encuentro.</string>
    <string name="content2_2EJICR">La razón de ser de este evento es la creación de sinergias entre el tejido investigador de las Ciencias de las Religiones, tanto a escala nacional como internacional, para difundir y debatir los nuevos trabajos que se están realizando en el estudio de las distintas manifestaciones religiosas, ya sea desde un punto de vista descriptivo, analítico o desde la reflexión teórica y metodológica. Desde AJICR, se invita a asistir a toda persona interesada en el estudio de las religiones, y concretamente, a aquellas personas tituladas que estén cursando un Máster, un programa de Doctorado o que hayan obtenido recientemente sus título de Doctor, con lo que se espera dinamizar y enriquecer los programas de formación de los futuros profesionales en la investigación del fenómeno religioso.</string>
    <string name="content3_2ECJICE">La asistencia al evento será libre y gratuita. Aquellos que deseen recibir un certificado de asistencia, que tendrá un coste de 10€, deberán rellenar el siguiente formulario:</string>
    <string name="inscripcion_2EJICR_Link"><a href="https://docs.google.com/forms/d/1jBTUae4TXq1uZY9ymTOC-gc803W7QKVl2C-I7DJGNiM/edit">Formulario de solicitud de certificado del II EJICR</a></string>
    <string name="programa_2EJICR_Link"><a href="https://ajicr.files.wordpress.com/2019/03/programa-ii-ejicr-2019.pdf">Programa II EJICR</a></string>
    <string name="comunicacion_2EJICR_Link"><a href="https://ajicr.files.wordpress.com/2019/03/resumenes-comunicaciones-bueno.pdf">Resumen de comunicaciones</a></string>
    <string name="comiteCientifico_2EJICR">Comité científico</string>
    <string name="comiteCientifico1_2EJCIR"><li><b>Prof. Dr. Eduardo Ferrer Albelda.</b> Universidad de Sevilla.</li></string>
    <string name="comiteCientifico2_2EJCIR"><li><b>Prof. Dr. Emilio González Ferrín.</b> Universidad de Sevilla.</li></string>
    <string name="comiteCientifico3_2EJCIR"><li><b>Profa. Dra. Katharina Lorenz.</b> Justus-Liebig-Universität Giessen, Alemania.</li></string>
    <string name="comiteCientifico4_2EJCIR"><li><b>Prof. Dr. Pedro Marfil Ruiz.</b> Universidad de Córdoba.</li></string>
    <string name="comiteCientifico5_2EJCIR"><li><b>Prof. Dr. José Antonio Molina Gómez.</b> Universidad de Murcia.</li></string>
    <string name="comiteCientifico6_2EJCIR"><li><b>Prof. Dr. Jesús F. Pascual Molina.</b> Universidad de Valladolid</li></string>
    <string name="comiteCientifico7_2EJCIR"><li><b>Profa. Dra. Georgia Petridou.</b> University of Liverpool</li></string>
    <string name="comiteCientifico8_2EJCIR"><li><b>Dra. Anna-Katharina Rieger.</b> Universität Graz.</li></string>
    <string name="comiteCientifico9_2EJCIR"><li><b>Prof. Dr. Sergio Rodríguez Tapia.</b> Universidad de Córdoba.</li></string>
    <string name="comiteCientifico10_2EJCIR"><li><b>Prof. Dr. Wolfgang Spickermann.</b> Universität Graz.</li></string>
    <string name="comiteCientifico11_2EJCIR"><li><b>Prof. Dr. Juan Carlos Ruiz Souza.</b> Universidad Complutense de Madrid.</li></string>
    <string name="comiteCientifico12_2EJCIR"><li><b>Prof. Dr. Jörg Rüpke.</b> Universität Erfurt.</li></string>
    <string name="comiteCientifico13_2EJCIR"><li><b>Profa. Dra. Monica Salvadori.</b> Università degli Studi di Padova, Italia.</li></string>
    <string name="comiteCientifico14_2EJCIR"><li><b>Prof. Dr. Alfonso Vives Cuesta.</b> Universidad de Valladolid e Instituto Bíblico y Oriental.</li></string>
    <string name="comiteCientifico15_2EJCIR"><li><b>Dra. Vanessa del Prete Mainer.</b> Universidad Complutense de Madrid.</li></string>
    <string name="comiteCientifico16_2EJCIR"><li><b>Profa. Dra. Ana Ruiz Osuna.</b> Universidad de Córdoba.</li></string>
    <string name="titleLocalizacion">Localizaciones</string>
    <string name="contentLocalizaciones">Tanto el Encuentro como las actividades programadas se realizarán en dos sedes diferentes, la <b>Facultad de Filología, edificios A y D</b> y <b>Centro Sefarad-Israel</b>. Además el jueves se ha programado una cena en el <b>Penalti Lounge Bar</b>.</string>
    <string name="localizacion_1"><li>Sesiones 1 y 2. Salón de Actos, Edificio D, Facultad de Filología, UCM.</li></string>
    <string name="localizacion_2"><li>Almuerzo. Edificio A, Cafetería profesores, Facultad de Filología, UCM.</li></string>
    <string name="localizacion_3"><li>Sesión 3. Centro Sefarad-Israel.</li></string>
    <string name="localizacion_4"><li>Cena Jueves, Penalti Lounge Bar (Moncloa).</li></string>
</resources>