<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_encuentro2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:text="@string/titleLocalizacion"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="normal|bold"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="135dp" />

            <TextView
                android:id="@+id/contentVisita"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:lineSpacingExtra="1sp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp"
                android:text="@string/contentLocalizaciones"
                android:textAlignment="viewStart"
                android:textColor="@color/colorPrimary"
                app:layout_constraintTop_toBottomOf="@+id/title_encuentro2"
                tools:layout_editor_absoluteX="0dp" />

            <com.google.android.gms.maps.MapView
                android:id="@+id/mapView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="16dp"
                android:layout_marginTop="19dp"
                android:paddingBottom="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                tools:layout_editor_absoluteX="16dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="0dp"
                android:paddingLeft="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="4dp"
                android:text="@string/localizacion_1"
                android:textColor="@color/colorPrimary"
                app:layout_constraintTop_toBottomOf="@+id/visitaLink"
                tools:layout_editor_absoluteX="0dp" />


            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="0dp"
                android:paddingLeft="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="4dp"
                android:text="@string/localizacion_2"
                android:textColor="@color/colorPrimary"
                app:layout_constraintTop_toBottomOf="@+id/visitaLink"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="0dp"
                android:paddingLeft="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="4dp"
                android:text="@string/localizacion_3"
                android:textColor="@color/colorPrimary"
                app:layout_constraintTop_toBottomOf="@+id/visitaLink"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="4dp"
                android:text="@string/localizacion_4"
                android:textColor="@color/colorPrimary"
                app:layout_constraintTop_toBottomOf="@+id/visitaLink"
                tools:layout_editor_absoluteX="0dp" />


        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>